usbredir-0.5.1 19 September 2012
--------------------------------
-usbredirparser:
 -usbredirparser_has_data_to_write now returns the write queue depth, instead
  of only 0 or 1
-usbredirhost:
 -usbredirhost_has_data_to_write now returns the write queue depth, instead
  of only 0 or 1
 -when the write queue gets too large, drop isochronous input packets

usbredir-0.5   7 September 2012
-------------------------------
-Windows support 
-Add support for 64 bit packet ids
-usbredirparser:
 -Add state serialization support
 -API and ABI changed to use 64 bit ids, all users need to be adjusted and
  recompiled for this!!
-usbredirhost:
 -Remove bulk packets time out, this fixes various devices not working
 -Ack packet cancels immediately
 -Now supports 64 bits packet ids
 -Use libusb_error_name instead of logging raw error codes
-usbredirfilter_check return -ENOENT rather then -EPERM if no rules match a
 device, this way the caller can differentiate between a deny caused by a
 matching rule, and one caused by there being no matching rules.

usbredir-0.4.3 2 April 2012
---------------------------
-usbredirhost:
 -Don't crash on devices in unconfigured state
 -Restore original device configuration when releasing the device
 -Significantly speed up reset handling
-usbredirserver:
 -Add a manpage

usbredir-0.4.2 6 March 2012
---------------------------
-Add usb_redir_babble status code

-usbredirparser:
 -extend the usb_redir_ep_info packet header with a max_packet_size field
  This new field is only send / received if both sides have the (new)
  usb_redir_cap_ep_info_max_packet_size capability

-usbredirhost:
 -Ensure we always re-attach kernel drivers on cleanup
 -Make set_config handling more robust
 -A set_config or a reset can cause us to loose access to the device, if
  this happens this now gets reported by usbredirhost_read_guest_data
  returning usbredirhost_read_device_lost

usbredir-0.4.1 25 February 2012
-------------------------------