@@ -1,3 +1,10 @@
+usbredir-0.5.2 15 September 2012
+--------------------------------
+-usbredirparser:
+ -rename libusbredirparser.pc to libusbredirparser-0.5.pc
+  This should really have been done with the 0.5 release as API
+  compatibility with previous releases was broken there!
+
 usbredir-0.5.1 19 September 2012
 --------------------------------
 -usbredirparser:
